--- a/package.json
+++ b/package.json
@@ -5,12 +5,14 @@
   "description": "breakout",
   "main": "index.js",
   "scripts": {
-    "build": "webpack"
+    "build": "webpack",
+    "deploy": "npm run build && gh-pages -d dist/"
   },
   "devDependencies": {
     "@types/node": "^10.11.7",
     "copy-webpack-plugin": "^4.5.3",
     "file-loader": "^2.0.0",
+    "gh-pages": "^2.0.1",
     "source-map-loader": "^0.2.4",
     "ts-loader": "^5.2.2",
     "typescript": "^3.1.3",
