--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "index.js",
   "scripts": {
     "build": "webpack",
-    "deploy": "npm run build && gh-pages -d dist/"
+    "deploy": "npm run build && gh-pages -d dist/",
+    "watch": "webpack -w"
   },
   "devDependencies": {
     "@types/node": "^10.11.7",
